# proxy-broker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.codex/skills/ui-ux-pro-max/: SKILL.md
.github/scripts/: compute-version.sh  metadata_gate.py  package_release_asset.sh  release-intent.sh  release_snapshot.py  test-release-snapshot.sh  verify_manifest_platforms.py
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  label-gate.yml  release.yml
deploy/forward-auth/: README.md  compose.build.yaml  compose.yaml
deploy/forward-auth/authelia/: users_database.yml
docs/: deployment.md
docs/contracts/: README.md  db.md  file-formats.md  http-apis.md  rust-api.md
docs/specs/: README.md  web-admin-ui.md
docs/specs/4jfey-appshell-workspace-card-spacing/: SPEC.md
docs/specs/6b2xu-profile-catalog-combobox/: SPEC.md
docs/specs/h2w7p-forward-auth-admin-and-profile-keys/: SPEC.md
docs/specs/kgm4c-install-ui-ux-pro-max-codex-skill/: SPEC.md
scripts/forward-auth/: render-stack.sh  run-shared-testbox.sh  run-stack-smoke.sh  smoke.sh
src/: api.rs  auth.rs  config_render.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs  runtime.rs  service.rs  subscription.rs  tasks.rs  web_ui.rs
src/store/: memory.rs  mod.rs  sqlite.rs
web/: .gitignore  README.md  biome.json  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/.storybook/: main.ts  preview.ts
web/scripts/: run-storybook-tests.ts  verify-stories.ts
web/src/: index.css  main.tsx
(+171 files in other folders)
