[package]
name = "proxy-broker"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proxy subscription/IP pool library and REST service backed by mihomo"
readme = "README.md"

[dependencies]
anyhow = "=1.0.97"
async-trait = "=0.1.89"
axum = { version = "=0.8.4", features = ["macros"] }
base64 = "=0.22.1"
clap = { version = "=4.5.32", features = ["derive", "env"] }
flate2 = "=1.1.2"
futures-util = "=0.3.31"
maxminddb = "=0.26.0"
reqwest = { version = "=0.12.14", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate", "zstd"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
sqlx = { version = "=0.8.2", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
thiserror = "=1.0.69"
tokio = { version = "=1.44.1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt", "json"] }
urlencoding = "=2.1.3"
uuid = { version = "=1.18.1", features = ["serde", "v4", "v5"] }
